# MuseumVisitors

./: CMakeLists.txt  Finding the time period.md  README.md  results.txt
MuseumVisitors/: CMakeLists.txt  doxygen.config
MuseumVisitors/docs/html/: _entry_log_reader_8cxx.html  _entry_log_reader_8hxx.html  _entry_log_reader_8hxx_source.html  _logger_8cxx.html  _logger_8hxx.html  _logger_8hxx_source.html  _museum_visitors_8cpp.html  _r_e_a_d_m_e_8md.html  _visitor_counter_8hxx_source.html  _visitor_counter_array_8cxx.html  _visitor_counter_array_8hxx.html  _visitor_counter_array_8hxx_source.html  _visitor_counter_map_8cxx.html  _visitor_counter_map_8hxx.html  _visitor_counter_map_8hxx_source.html  annotated.html  class_entry_log_reader-members.html  class_entry_log_reader.html  class_logger-members.html  class_logger.html  class_visitor_counter-members.html  class_visitor_counter.html  class_visitor_counter_array-members.html  class_visitor_counter_array.html  class_visitor_counter_map-members.html  class_visitor_counter_map.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_enum.html  globals_func.html  index.html  namespace_visitor_tracker.html  namespaces.html
MuseumVisitors/sample_data/: visitors_1000.txt  visitors_10000.txt  visitors_100000.txt  visitors_multiple_max.txt
MuseumVisitors/src/: Logger.cxx  Logger.hxx  MuseumVisitors.cpp  VisitorCounterArray.cxx  VisitorCounterArray.hxx  VisitorCounterMap.cxx  VisitorCounterMap.hxx
(+62 files in other folders)
